# leak-proof-cmap

./: .gitignore  README.md  leak_proof_cmap_00_define_splits.ipynb  leak_proof_cmap_01_model_selection.ipynb  leak_proof_cmap_02_investigate_model_training.ipynb  leak_proof_cmap_04_distinctness_eval.ipynb  leak_proof_cmap_05_uniqueness_eval.ipynb  leak_proof_cmap_06_additional_analysis_count_unique_in_splits.ipynb  pyproject.toml
src/leakproofcmap/: __init__.py  __main__.py  callbacks.py  cmap_split.py  data_wrangling.py  jump_moa_compounds.py  metrics.py  model_control.py  model_to_metric.py  palette.py  phenonaut_functions.py
src/leakproofcmap/benchmarking/: __init__.py  auroc.py  percent_replicating.py  permutation_test_distinct.py
src/leakproofcmap/models/tripletloss/: __init__.py  triplet_loss_datamodule.py  (+1 more)
src/leakproofcmap/resources/: cmap_split_cellidsplit1_moasplit1.json  cmap_split_cellidsplit1_moasplit2.json  cmap_split_cellidsplit1_moasplit3.json  cmap_split_cellidsplit1_moasplit4.json  cmap_split_cellidsplit1_moasplit5.json  cmap_split_cellidsplit2_moasplit1.json  cmap_split_cellidsplit2_moasplit2.json  cmap_split_cellidsplit2_moasplit3.json  cmap_split_cellidsplit2_moasplit4.json  cmap_split_cellidsplit2_moasplit5.json  cmap_split_cellidsplit3_moasplit1.json  cmap_split_cellidsplit3_moasplit2.json  cmap_split_cellidsplit3_moasplit3.json  cmap_split_cellidsplit3_moasplit4.json  cmap_split_cellidsplit3_moasplit5.json  cmap_split_cellidsplit4_moasplit1.json  cmap_split_cellidsplit4_moasplit2.json  cmap_split_cellidsplit4_moasplit3.json  cmap_split_cellidsplit4_moasplit4.json  cmap_split_cellidsplit4_moasplit5.json  cmap_split_cellidsplit5_moasplit1.json  cmap_split_cellidsplit5_moasplit2.json  cmap_split_cellidsplit5_moasplit3.json  cmap_split_cellidsplit5_moasplit4.json  cmap_split_cellidsplit5_moasplit5.json
tests/: conftest.py  test_compactness.py  test_distinctness.py  test_metrics.py  test_uniqueness.py
tests/test_models/: test_triplet_data.py  test_tripletloss.py
